--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-  <h1>Temps écoulé depuis ......</h1>
+  <h1>Temps écoulé :</h1>
   <div id="compteur">Calcul en cours...</div>
 
   <script>
